<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sub_titulo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonSomAplauso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_botao_aplauso" />

    <Button
        android:id="@+id/buttonSomChuva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_botao_chuva" />

    <Button
        android:id="@+id/buttonSomGelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_botao_gelo" />

    <Button
        android:id="@+id/buttonSomTempestade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_botao_tempestade" />

    <Button
        android:id="@+id/buttonSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_botao_sobre" />

</LinearLayout>
